samples/_failures_safe/1761311082_a03aaf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c038cce.c: In function ‘main’:
./samples/SAFE/__tmp_8c038cce.c:184:9: error: expected expression at end of input
  184 |         if (
      |         ^~
./samples/SAFE/__tmp_8c038cce.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c038cce.c:184:9: error: expected declaration or statement at end of input
